TESB-24619 patch cxf feature, sync trun.bat/client.bat